<resources>
    <string name="app_name">Monitoring Alarm</string>
    <string name="title_home">Home</string>
    <string name="desc_item_view">Image Item View</string>
    <string name="textview">TextView</string>
    <string name="label_split">-</string>
    <string name="label_for_start">Start Date</string>
    <string name="label_for_end">End Date</string>
    <string name="label_title">Title</string>
    <string name="label_period">Period</string>
    <string name="label_ratio">Ratio</string>
    <string name="label_my_data">My Data</string>
    <string name="label_search">Search</string>
    <string name="label_trend">Trend</string>
    <string name="label_hot_keyword">Hot Keyword</string>
    <string name="label_goods_name">Goods Name</string>
    <string name="label_item_cnt_max">Max Item Count</string>
    <string name="label_mall">Mall</string>
    <string name="label_sort">Sort</string>
    <string name="label_lprice">Low</string>
    <string name="label_hprice">High</string>
    <string name="label_goods">Goods</string>
    <string name="label_detail">Detailed Info</string>
    <string name="label_delete">Delete</string>
    <string name="label_ok">OK</string>
    <string name="label_cancel">Cancel</string>
    <string name="title_add_item">Add this item....</string>
    <string name="title_del_item">Delete this item....</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
</resources>
