<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">
    <LinearLayout
        android:id="@+id/layout_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/label_title"
            android:textColor="@android:color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:textSize="14sp"
            android:hint="@string/label_title" />
        <TextView
            android:id="@+id/label_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/label_period"
            android:textSize="12sp" />
        <TextView
            android:id="@+id/label_ratio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:hint="@string/label_ratio"
            android:textSize="12sp" />
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/cardview_light_background" />
</LinearLayout>