<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:accessibilityHeading="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.mydata.FragmentMyData">

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/activity_text_padding"
        android:paddingEnd="@dimen/activity_text_padding"
        android:text="@string/label_title" />

    <TextView
        android:id="@+id/text_mall"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.3"
        app:layout_constraintStart_toEndOf="@id/text_title"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_weight="1"
        android:text="@string/label_mall" />

    <TextView
        android:id="@+id/text_lprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/text_mall"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="@dimen/activity_text_padding"
        android:paddingEnd="@dimen/activity_text_padding"
        android:text="@string/label_lprice" />

    <TextView
        android:id="@+id/text_hprice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent="0.1"
        app:layout_constraintStart_toEndOf="@id/text_lprice"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="0dp"
        android:paddingEnd="@dimen/activity_text_padding"
        android:text="@string/label_hprice" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/my_datas"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="@dimen/activity_text_padding"
        app:layout_constraintHeight_percent="0.9"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

</androidx.constraintlayout.widget.ConstraintLayout>