<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.naver.goods.FragmentSearch">

    <TableLayout
        android:id="@+id/layout_user_input"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:paddingStart="10dp"
        android:paddingTop="0dp"
        android:paddingEnd="10dp"
        app:layout_constraintHeight_percent="0.23"
        app:layout_constraintBottom_toTopOf="@id/btn_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow>
            <TextView android:text="@string/label_goods_name" />

            <EditText
                android:id="@+id/text_goods_name"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:autofillHints='""'
                android:ems="10"
                android:hint="@string/label_goods_name"
                android:inputType="textPersonName" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/label_item_cnt_max" />

            <ListView
                android:id="@+id/text_item_cnt_max"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:scrollbarAlwaysDrawVerticalTrack="true"
                android:scrollbarStyle="insideInset"
                android:smoothScrollbar="true" />
        </TableRow>

        <TableRow>
            <TextView android:text="@string/label_sort" />
            <EditText
                android:id="@+id/text_sort"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:autofillHints='""'
                android:ems="10"
                android:hint="@string/label_sort"
                android:inputType="textPersonName" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/btn_search"
        android:paddingStart="40dp"
        android:paddingEnd="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/layout_user_input"
        app:layout_constraintStart_toStartOf="@id/layout_user_input"
        android:text="@string/label_search" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/view_results"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="20dp"
        android:visibility="visible"
        app:layout_constraintHeight_percent="0.77"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_search" />

</androidx.constraintlayout.widget.ConstraintLayout>