<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:verticalScrollbarPosition="defaultPosition"
    android:visibility="visible"
    tools:context=".ui.home.HomeFragment">

    <TextView
        android:id="@+id/label_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_text_padding"
        android:text="@string/app_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3F51B5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/label_hot_keyword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_text_padding"
        android:gravity="center_horizontal"
        android:text="@string/label_hot_keyword"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/host_list_view"
        app:layout_constraintTop_toBottomOf="@id/label_title" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/host_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_text_padding"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toTopOf="@id/label_trend"
        app:layout_constraintTop_toBottomOf="@id/label_hot_keyword" />

    <TextView
        android:id="@+id/label_trend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_text_padding"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/label_trend"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textColor="#3F51B5"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/host_list_view"
        app:layout_constraintBottom_toTopOf="@+id/trend_list_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/trend_list_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_text_padding"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintTop_toBottomOf="@id/label_trend"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>